--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ jdk:
 
 script: mvn clean install
 
-
-notification:
-  email: artemfedotov045@gmail.com
+deploy:
+  provider: heroku
+  api_key:
+    secure: $HEROKU_API_KEY
+  app: travis-ci-example
